보일시 설명 수정

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ var arr = [
 '정할정', '定', '집면', '宀', '바를정', '正', '.', ' ', '.', ' ', '.', ' ', '집을 바른 곳에 정해서 지어야 한다. 결정', '', 
 '놓을방', '放', '모방', '方', '칠복', '攵', '.', ' ', '.', ' ', '.', ' ', '사방에서 잡힌 경범죄인을 몽둥이로 몇 대 때리고 사방 아무대로나 가라고 놓아줌', '', 
 '갚을보', '報', '다행행', '幸', '병부절', '卩', '또우', '又', '.', ' ', '.', ' ', '죄인을 붙잡아 수갑을 채우고 재판한 후 구부려 앉게하고 손을 대어 원한을 갚게함. 보상', '', 
-'보일시', '示', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '다리를 높이 제사 그릇 모양. 제사그릇에 제물을 담아 조상에게 보인다. 전시', '', 
+'보일시', '示', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '다리를 높인 제사 그릇 모양. 제사그릇에 제물을 담아 조상에게 보인다. 전시', '', 
 '고할고', '告', '소우', '牛', '입구', '口', '.', ' ', '.', ' ', '.', ' ', '소를 잡아 제물을 마련한 후 입으로 축문을 읽어 조상에게 고한다', '', 
 '높을숭', '崇', '뫼산', '山', '마루종', '宗', '.', ' ', '.', ' ', '.', ' ', '높은 산마루에 집을 짓고 제사를 지내는 모습. 제사를 지내는 것은 높이는 행위이다. 숭배', '', 
 '마루종', '宗', '집면', '宀', '보일시', '示', '.', ' ', '.', ' ', '.', ' ', '집을 짓고 제사를 지내는 곳은 산 마루이다. 종교', '', 
