나아갈취 수정

--- a/index.html
+++ b/index.html
@@ -2036,7 +2036,7 @@ var arr = [
 
 '나아갈진', '進', '갈착', '辶', '새추', '隹', '.', '.', '.', '.', '.', '.', '새가 뒷걸음으로 걷지 못하고 앞으로만 나아가는 모습. 추진력.', '.',
 
-'나아갈취', '就', '서울경', '京', '창과', '戈', '.', '.', '.', '.', '.', '.', '창을 들고 적의 수도, 서울을 탈취하러 나아가는 모습. 진취적.', '.',
+'나아갈취', '就', '서울경', '京', '더욱우', '尤', '.', '.', '.', '.', '.', '.', '적의 수도, 서울을 탈취하러 달려가는 모습. 진취적.', '.',
 
 '닿을착', '着', '양양', '羊', '삐침별', '丿', '눈목', '目', '.', '.', '.', '.', '양털 모자를 눈에 닿도록 눌러 쓴 모양. 착용. 도착.', '.',
 
