가장최 수정

--- a/index.html
+++ b/index.html
@@ -2082,7 +2082,7 @@ var arr = [
 
 '편안안', '安', '집면', '宀', '여자여', '女', '.', '.', '.', '.', '.', '.', '여자가 집안에 있으니 편안하다. 평안.', '.',
 
-'가장최', '最', '가로왈', '曰', '취할취', '醉', '.', '.', '.', '.', '.', '.', '입으로 귀를 잘라 손에 쥐고 자신이 자른 귀가 가장 크다고 말하는 모양.', '.',
+'가장최', '最', '가로왈', '曰', '가질취', '取', '.', '.', '.', '.', '.', '.', '입으로 귀를 잘라 손에 쥐고 자신이 자른 귀가 가장 크다고 말하는 모양.', 
 
 '곧을정', '貞', '점복', '卜', '솥정', '鼎', '여덟팔', '八', '.', '.', '.', '.', '점을 보고 제사 솥에 고기를 삶아 제사를 지낸 후 곧은 방향을 정해서 일을 추진하는 모습.', '.',
 
