--- a/index.html
+++ b/index.html
@@ -2082,7 +2082,7 @@ var arr = [
 
 '편안안', '安', '집면', '宀', '여자여', '女', '.', '.', '.', '.', '.', '.', '여자가 집안에 있으니 편안하다. 평안.', '.',
 
-'가장최', '最', '가로왈', '曰', '가질취', '取', '.', '.', '.', '.', '.', '.', '입으로 귀를 잘라 손에 쥐고 자신이 자른 귀가 가장 크다고 말하는 모양.', 
+'가장최', '最', '가로왈', '曰', '가질취', '取', '.', '.', '.', '.', '.', '.', '입으로 귀를 잘라 손에 쥐고 자신이 자른 귀가 가장 크다고 말하는 모양.', '.',
 
 '곧을정', '貞', '점복', '卜', '솥정', '鼎', '여덟팔', '八', '.', '.', '.', '.', '점을 보고 제사 솥에 고기를 삶아 제사를 지낸 후 곧은 방향을 정해서 일을 추진하는 모습.', '.',
 
@@ -4085,10 +4085,6 @@ var arr = [
 '잡을획', '擭', '손수변', '扌', '풀초두', '艹', '새추', '隹', '또우', '又', '.', '.', '손으로 풀숲에 있는 새를 잡는 모습. 포획.', '.',
 
 '속죄할속', '贖', '조개패', '貝', '팔매', '賣', '.', '.', '.', '.', '.', '.', '돈을 주고 노비를 팔라고 요청하는 모습', '.',
-
-
-
-
 
 
 
