--- a/index.html
+++ b/index.html
@@ -4239,6 +4239,8 @@ var arr = [
               
               document.getElementById("h7").textContent = arr[i+12];
 
+              document.getElementById("seq").textContent = i+1;
+
               break;
             }
          }      
@@ -4506,7 +4508,7 @@ var arr = [
 
 <h2 id="demo"></h2>
 
-<span id="result"><font size = 15px>.</font></span>
+<span id="seq"></span><span id="result"><font size = 15px>.</font></span>
 
 <div>
     <span style="display : inline-block">
