--- a/index.html
+++ b/index.html
@@ -4118,6 +4118,7 @@ var arr = [
               document.getElementById("h6").textContent = ".";
               document.getElementById("c6").textContent = ".";
               document.getElementById("h7").textContent = ".";
+              document.getElementById("seq").textContent = ".";
 
         //line1
 
