--- a/index.html
+++ b/index.html
@@ -4240,7 +4240,7 @@ var arr = [
               
               document.getElementById("h7").textContent = arr[i+12];
 
-              document.getElementById("seq").textContent = i+1;
+              document.getElementById("seq").textContent = (i+1)/11;
 
               break;
             }
