아닐불2 수정

--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@ var arr = [
 
 '신선선', '仙', '사람인변', '亻', '뫼산', '山', '.', '.', '.', '.', '.', '.', '사람이 산에 살면 신선처럼 마음이 선해진다.', '.',
 
-'부처불', '佛', '사람인변', '亻', '아니불', '弗', '.', '.', '.', '.', '.', '.', '사람인데 활로 살생하지 말라고 가르치는 부처.', '.',
+'부처불', '佛', '사람인변', '亻', '아닐불2', '弗', '.', '.', '.', '.', '.', '.', '사람인데 활로 살생하지 말라고 가르치는 부처.', '.',
 
 '귀신신', '神', '보일시', '示', '펼신', '申', '.', '.', '.', '.', '.', '.', '제사 그릇 위로 번개가 쳐서 펼쳐지는 모습. 신이 제사에 응답했다고 여김.', '.',
 
@@ -2410,7 +2410,7 @@ var arr = [
 
 '빌릴대', '貸', '대신할대', '代', '조개패', '貝', '.', '.', '.', '.', '.', '.', '사람이 담보물을 저당으로 잡힌 후 돈을 빌리는 모습. 대출.', '.',
 
-'떨칠불', '拂', '손수변', '扌', '아니불', '弗', '.', '.', '.', '.', '.', '.', '손으로 활을 사용하지 말라고 활을 떨치는 모습.', '.',
+'떨칠불', '拂', '손수변', '扌', '아닐불2', '弗', '.', '.', '.', '.', '.', '.', '손으로 활을 사용하지 말라고 활을 떨치는 모습.', '.',
 
 '갚을상', '償', '사람인변', '亻', '오히려상', '尚', '조개패', '貝', '.', '.', '.', '.', '사람이 기와집에서 일할 때 상으로 받은 돈으로 빚을 갚는다. 상환.', '.',
 
@@ -2426,7 +2426,7 @@ var arr = [
 
 '검소할검', '儉', '사람인변', '亻', '다첨', '僉', '.', '.', '.', '.', '.', '.', '사람이 삼합집에 먹는 입을 가진 사람, 부양가족이 많으면 생활이 검소해진다. 검소.', '.',
 
-'쓸비', '費', '아니불', '弗', '조개패', '貝', '.', '.', '.', '.', '.', '.', '돈을 써 버려면 돈은 더 이상 내가 가진 돈이 아니다. 소비.', '.',
+'쓸비', '費', '아닐불2', '弗', '조개패', '貝', '.', '.', '.', '.', '.', '.', '돈을 써 버려면 돈은 더 이상 내가 가진 돈이 아니다. 소비.', '.',
 
 '쌓을적', '積', '벼화', '禾', '예쁠봉', '丰', '조개패', '貝', '.', '.', '.', '.', '벼나 돈을 쌓아서 빌려주면 가시와 같은 이자가 돋아난다. 누적.', '.',
 
