--- a/index.html
+++ b/index.html
@@ -4086,6 +4086,7 @@ var arr = [
 
 '속죄할속', '贖', '조개패', '貝', '팔매', '賣', '.', '.', '.', '.', '.', '.', '돈을 주고 노비를 팔라고 요청하는 모습', '.',
 
+'음란', '淫亂', '음란할음', '淫', '어지러울란', '亂', '.', ' ', '.', ' ', '.', ' ', '손으로 만져서 땀이나고 싸움이 난 것처럼 어지럽게 되어 건전하지 못한 것', '.', 
 
 
               
