--- a/index.html
+++ b/index.html
@@ -4088,6 +4088,13 @@ var arr = [
 
 '음란', '淫亂', '음란할음', '淫', '어지러울란', '亂', '.', ' ', '.', ' ', '.', ' ', '손으로 만져서 땀이나고 싸움이 난 것처럼 어지럽게 되어 건전하지 못한 것', '.', 
 
+'이신칭의', '以信稱義', '써이', '以', '믿을신', '信', '일컬을칭', '稱', '옳을의', '義', '.', ' ', '믿음으로써 의롭다 칭함을 받는다. (행위가 아닌 예수님을 믿음으로 구원받는 복음)', '.', 
+
+'대속', '代贖', '대신할대', '代', '속죄할속', '贖', '.', ' ', '.', ' ', '.', ' ', '죄인을 대신해서 값을 치루고 죄인을 자유롭게하는 행위', '.', 
+
+'속죄할속', '贖', '조개패', '貝', '팔매', '賣', '.', ' ', '.', ' ', '.', ' ', '돈을 주고 노예로 팔린 사람을 되돌리는 행위', '.', 
+
+
 
               
 ];
