--- a/test_jason.html
+++ b/test_jason.html
@@ -1,7 +1,7 @@
 test1
 
 <script>
-fetch('http://muckmool.github.io/data.json')
+fetch('https://muckmool.github.io/data.json')
   .then((response) => response.json())
   .then((data) => console.log(data));
 </script>
