--- a/test_jason.html
+++ b/test_jason.html
@@ -3,5 +3,5 @@ test1
 <script>
 fetch('https://muckmool.github.io/data.json')
   .then((response) => response.json())
-  .then((data) => console.log(data));
+  .then((data) => console.log(data[1]));
 </script>
