--- a/test_jason.html
+++ b/test_jason.html
@@ -1,7 +1,16 @@
 test1
 
 <script>
+
 fetch('https://muckmool.github.io/data.json')
   .then((response) => response.json())
-  .then((data) => console.log(data[1]));
+  .then((data) => { 
+
+let temp = data;
+console.log(temp.data[1].hangul); 
+
+
+} );
+
+
 </script>
