--- a/test_jason.html
+++ b/test_jason.html
@@ -6,7 +6,7 @@ fetch('https://muckmool.github.io/data.json')
   .then((response) => response.json())
   .then((data) => { 
 
-let temp = data.dictionary[0].hanja + " " + data.dictionary[0].hangul;
+let temp = data.dictionary[0].hangul + " " + data.dictionary[0].hanja;
 
 console.log(temp); 
 
