--- a/index_j.html
+++ b/index_j.html
@@ -15,7 +15,7 @@ fetch('https://muckmool.github.io/data2.json')
     
     let temp = data.dictionary; 
     let max = temp.length;
-    console.log(max); 
+    //console.log(max); 
 
     for (i = 0; i < max; i += 1) {
         arr.push(data.dictionary[i].hangul);
