h6 얼라인먼트 수정

--- a/index_j.html
+++ b/index_j.html
@@ -368,7 +368,7 @@ fetch('https://muckmool.github.io/data2.json')
 <td align=center id="h3">.</td>
 <td align=center id="h4">.</td>
 <td align=center id="h5">.</td>
-<td align=left id="h6">.</td>
+<td align=center id="h6">.</td>
 </tr>
 <tr>
 <td align=center id="c11">.</td>
