북편집기 업데이트

--- a/book/book_edit.html
+++ b/book/book_edit.html
@@ -143,6 +143,6 @@
 
         <br><br>
         <p id="result1">.</p>
-        <p id="result2">.</p>
+        <p id="result2" style="font-size:23px; font-weight: 900;">.</p>
 
 </html>
