북리더 업데이트

--- a/book/book_read.html
+++ b/book/book_read.html
@@ -185,6 +185,12 @@
 -->
 
 <table style="border-collapse: collapse; width: 100%;" border="1" width="100%" text-align="center">
+
+    <colgroup>
+        <col width="99%" />
+        <col width="1%" />
+      </colgroup>
+
     <tbody>   
         <tr><td id="result1">.</td></tr>
         <tr><td>&nbsp</td></tr>
