바이블 수정

--- a/bible/book_read.html
+++ b/bible/book_read.html
@@ -55,7 +55,7 @@
         //console.log(max);
 
         let hangul_temp1 = arr[i*7 + 3];
-        let hangul_temp2 = hangul_temp1.split(' ');
+        let hangul_temp2 = hangul_temp1.split('_');
 
         let hanja_temp3 ="";
 
@@ -71,7 +71,7 @@
         //console.log(max);
 
         let hangul_temp71 = arr[i*7 + 5];
-        let hangul_temp72 = hangul_temp71.split(' ');
+        let hangul_temp72 = hangul_temp71.split('_');
 
         let hanja_temp73 ="";
 
@@ -86,8 +86,8 @@
         resultElement4.innerHTML = hanja_temp3;
         resultElement5.innerHTML = hanja_temp73;
 
-        resultElement6.innerText = arr[i*7 + 3];
-        resultElement7.innerText = arr[i*7 + 5];
+        resultElement6.innerText = arr[i*7 + 2];
+        resultElement7.innerText = arr[i*7 + 4];
         resultElement8.innerText = arr[i*7 + 6];
         
 
