한자 업데이트

--- a/bible/book_read.html
+++ b/bible/book_read.html
@@ -63,8 +63,10 @@
 
 
     function search()  {
-        const resultElement_book = document.getElementById('result_book');
-        const resultElement_cv = document.getElementById('result_cv');
+
+        const resultElement_book_input = document.getElementById('bk_input');
+        const resultElement_cv_input = document.getElementById('cv_input');
+
         const resultElement3 = document.getElementById('seq');
         const resultElement4 = document.getElementById('result4');
         const resultElement5 = document.getElementById('result5');
@@ -110,8 +112,8 @@
 
         //console.log(hanja_temp3);
 
-        resultElement_book.innerText = arr[i*7];
-        resultElement_cv.innerText = arr[i*7 + 1];
+        resultElement_book_input.value = arr[i*7];
+        resultElement_cv_input.value = arr[i*7 + 1];
         resultElement4.innerHTML = hanja_temp3;
         resultElement5.innerHTML = hanja_temp73;
 
@@ -123,8 +125,8 @@
     }
 
     function next()  {
-        const resultElement_book = document.getElementById('result_book');
-        const resultElement_cv = document.getElementById('result_cv');
+        const resultElement_book_input = document.getElementById('bk_input');
+        const resultElement_cv_input = document.getElementById('cv_input');
         const resultElement3 = document.getElementById('seq');
         const resultElement4 = document.getElementById('result4');
         const resultElement5 = document.getElementById('result5');
@@ -172,8 +174,8 @@
 
         //console.log(hanja_temp3);
 
-        resultElement_book.innerText = arr[i*7];
-        resultElement_cv.innerText = arr[i*7 + 1];
+        resultElement_book_input.value = arr[i*7];
+        resultElement_cv_input.value = arr[i*7 + 1];
         resultElement3.value = String(i);
         resultElement4.innerHTML = hanja_temp3;
         resultElement5.innerHTML = hanja_temp73;
@@ -186,8 +188,8 @@
     }
 
     function previous()  {
-        const resultElement_book = document.getElementById('result_book');
-        const resultElement_cv = document.getElementById('result_cv');
+        const resultElement_book_input = document.getElementById('bk_input');
+        const resultElement_cv_input = document.getElementById('cv_input');
         const resultElement3 = document.getElementById('seq');
         const resultElement4 = document.getElementById('result4');
         const resultElement5 = document.getElementById('result5');
@@ -235,8 +237,8 @@
 
         //console.log(hanja_temp3);
 
-        resultElement_book.innerText = arr[i*7];
-        resultElement_cv.innerText = arr[i*7 + 1];
+        resultElement_book_input.value = arr[i*7];
+        resultElement_cv_input.value = arr[i*7 + 1];
         resultElement3.value = String(i);
         resultElement4.innerHTML = hanja_temp3;
         resultElement5.innerHTML = hanja_temp73;
@@ -249,88 +251,7 @@
     }
 
 
-    function next2()  {
-        const resultElement1 = document.getElementById('result_book');
-        const resultElement2 = document.getElementById('result2');
-        const resultElement3 = document.getElementById('seq');
-        const resultElement4 = document.getElementById('result4');
-        const resultElement5 = document.getElementById('result5');
-
-        let i = resultElement3.value;
-        i = parseInt(i);
-
-        i = i + 1;
-
-
-
-        if((i*4 + 3) > arr.length) { i = i - 1; }
-
-        //console.log(i);
-
-        let hanja_temp1 = arr[i*7 + 1];
-        let hanja_temp2 = hanja_temp1.split('');
-        const max = hanja_temp2.length;
-
-        //console.log(max);
-
-        let hangul_temp1 = arr[i*7 + 2];
-        let hangul_temp2 = hangul_temp1.split('');
-
-        let hanja_temp3 ="";
-
-        for (j = 0; j < max; j += 1) {
-             hanja_temp3 = hanja_temp3 + "<ruby>" + hanja_temp2[j] + "<rt>" + hangul_temp2[j] + "</rt>" + "</ruby>";
-        }
-
-        console.log(i);
-
-        resultElement1.innerText = arr[i*7];
-        resultElement2.innerHTML = hanja_temp3;
-        resultElement3.value = String(i);
-        resultElement4.innerText = arr[i*7 + 3];
-        resultElement5.innerText = arr[i*7 + 2];
-    }
-
-
-    function previous2()  {
-        const resultElement1 = document.getElementById('result_book');
-        const resultElement2 = document.getElementById('result2');
-        const resultElement3 = document.getElementById('seq');
-        const resultElement4 = document.getElementById('result4');
-        const resultElement5 = document.getElementById('result5');
-
-        let i = resultElement3.value;
-        i = parseInt(i);
-
-        i = i - 1;
-
-        if(i < 1) { i = 1; }
-
-        //console.log(i);
-
-        let hanja_temp1 = arr[i*7 + 1];
-        let hanja_temp2 = hanja_temp1.split('');
-        const max = hanja_temp2.length;
-
-        //console.log(max);
-
-        let hangul_temp1 = arr[i*7 + 2];
-        let hangul_temp2 = hangul_temp1.split('');
-
-        let hanja_temp3 ="";
-
-        for (j = 0; j < max; j += 1) {
-             hanja_temp3 = hanja_temp3 + "<ruby>" + hanja_temp2[j] + "<rt>" + hangul_temp2[j] + "</rt>" + "</ruby>";
-        }
-
-        console.log(i);
-
-        resultElement1.innerText = arr[i*7];
-        resultElement2.innerHTML = hanja_temp3;
-        resultElement3.value = String(i);
-        resultElement4.innerText = arr[i*7 + 3];
-        resultElement5.innerText = arr[i*7 + 2];
-    }
+  
 
     // TTS
 
@@ -426,11 +347,6 @@
 
 
     <tbody>   
-        <tr><td id="result_book" style="font-size:26px;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result_cv" style="font-size:26px;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-
         <tr><td id="result4" style="font-size:26px; font-weight: 300;">.</td></tr>
         <tr><td>&nbsp</td></tr>
 
