--- a/index.html
+++ b/index.html
@@ -484,9 +484,9 @@ fetch('https://muckmool.github.io/data2.json')
     
     &nbsp;<button onclick="speak();" style="width: 70px; height: 35px; font-size: 15px;"> TTS </button>
 
-    &nbsp;<button onclick="canvas.erase(); clean(); decrease(); search();" style="width: 70px; height: 35px; font-size: 15px;"> PREV </button>
+    &nbsp;<button onclick="canvas.erase(); clean_all(); decrease(); search();" style="width: 70px; height: 35px; font-size: 15px;"> PREV </button>
 
-    &nbsp;<button onclick="canvas.erase(); clean(); increase(); search();" style="width: 70px; height: 35px; font-size: 15px;"> NEXT </button>
+    &nbsp;<button onclick="canvas.erase(); clean_all(); increase(); search();" style="width: 70px; height: 35px; font-size: 15px;"> NEXT </button>
       
     &nbsp;<canvas id="canvas" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
 
