--- a/bible02/book_read.html
+++ b/bible02/book_read.html
@@ -191,6 +191,7 @@ function book_load()  {
         const resultElement6 = document.getElementById('result6');
         const resultElement7 = document.getElementById('result7');
         const resultElement8 = document.getElementById('result8');
+        const resultElement9 = document.getElementById('result9');
 
         let i = resultElement3.value;
         i = parseInt(i);
@@ -231,6 +232,7 @@ function book_load()  {
         //console.log(hanja_temp3);
 
         //resultElement_book_input.value = arr[i*7];
+        resultElement9.innerText = arr[i*6];
         resultElement_cv_input.value = arr[i*6 + 1];
         resultElement4.innerHTML = hanja_temp3;
         resultElement5.innerHTML = hanja_temp73;
@@ -251,6 +253,7 @@ function book_load()  {
         const resultElement6 = document.getElementById('result6');
         const resultElement7 = document.getElementById('result7');
         const resultElement8 = document.getElementById('result8');
+        const resultElement9 = document.getElementById('result9');
 
         let i = resultElement3.value;
         i = parseInt(i) + 1;
@@ -293,6 +296,7 @@ function book_load()  {
         //console.log(hanja_temp3);
 
         //resultElement_book_input.value = arr[i*7];
+        resultElement9.innerText = arr[i*6];
         resultElement_cv_input.value = arr[i*6 + 1];
         resultElement3.value = String(i);
         resultElement4.innerHTML = hanja_temp3;
@@ -314,6 +318,7 @@ function book_load()  {
         const resultElement6 = document.getElementById('result6');
         const resultElement7 = document.getElementById('result7');
         const resultElement8 = document.getElementById('result8');
+        const resultElement9 = document.getElementById('result9');
 
         let i = resultElement3.value;
         i = parseInt(i) - 1;
@@ -356,6 +361,7 @@ function book_load()  {
         //console.log(hanja_temp3);
 
         //resultElement_book_input.value = arr[i*7];
+        resultElement9.innerText = arr[i*6];
         resultElement_cv_input.value = arr[i*6 + 1];
         resultElement3.value = String(i);
         resultElement4.innerHTML = hanja_temp3;
@@ -540,6 +546,9 @@ function book_load()  {
 
 
     <tbody>   
+        <tr><td id="result9" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+
         <tr><td id="result4" style="font-size:26px; font-weight: 300;">.</td></tr>
         <tr><td>&nbsp</td></tr>
 
